2008-06-13  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (InformeCompras, InformeComprasShow): Deleted.

	* postgres-functions.c (IngresarGuia): Added the column list to
	insert data.
	(IngresarDetalleDocumento): Changed to use the new tables
	separated for guide and invoice.

2008-06-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CloseAskIngreso|Canjeables|CanjeablesWindow): Deleted.
	(CheckCanjeables): Deleted.

	* ventas.c (ventas_win): Added initialize on NULL to GError.

	* compras.c (on_button_ok_ingress_clicked): Added code to deal
	with partial_invoice ingress.

	* tiempo.c (RefreshTime): Deleted function.
	(__days): Deleted.
	(__months): Deleted.

	* Makefile.am: Added 2008 to the copyright years list.

	* tiempo.c: Added 2008 to the copyright years list.

	* tipos.h: Added 2008 to the copyright years list. Deleted some
	vars used with the old interface.

	* compras.c (AddFactura): Changed to use GDate.
	(ShowProductDescription): Deleted function.
	(SearchProductHistory): Deleted old commented code. Added comments
	to keep out the use of label_canje and label_stock_pro vars.
	(compras_win|RemoveBuyProduct): "gtk_widget_set_sensitive
	(confirm_button, TRUE);" deleted.
	(IngresoParcial|ChangeIngreso): Deleted function.
	(CambiarStock): Commented function, can be used in the future.
	(ElabVencCal|CloseElabVenc): Deleted.
	(SetElabVenc|DrawAsk): Deleted
	(AskIngreso): Deleted commented code.
	(CloseAskIngreso): Deleted unnecessary code.
	(on_button_ok_ingress_clicked): Added code to deal with
	partial_guide ingress.

2008-06-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_tree_selection_pending_guide_changed): Added
	function to deal with the proper signal and fill the bottom tree
	view with the product list of the selected guide.

	* utils.c (clean_container): Added support to deal with tree views
	and treat a gtk_treeview as a widget not as a container.

	* utils.h: Added declaratino of clean_container().
